--- a/client/src/pages/Hospitals/Hospital_Data_Mgmt/OrgDataMgmt.css
+++ b/client/src/pages/Hospitals/Hospital_Data_Mgmt/OrgDataMgmt.css
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+@font-face {
+  font-family: 'Product Sans'; 
+  src: url('../../../fonts/ProductSans/ProductSans-Regular.ttf') format('woff2');
+  font-weight: 400; 
+  font-style: normal; 
+}
+
+@font-face {
+  font-family: 'Helvetica Neue'; 
+  src: url('../../../fonts/helvetica-neue-5/HelveticaNeueMedium.otf') format('woff2');
+  font-weight: 400; 
+  font-style: normal; 
+}
+
+@font-face {
+  font-family: 'segoe-ui-this'; 
+  src: url('../../../fonts/segoe-ui-this/segoeuithis.ttf') format('woff2');
+  font-weight: 400; 
+  font-style: normal; 
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +33,8 @@
 
 body, html {
     height: 100%;
+    font-family: 'Product Sans'; 
+
 }
 
 .org-data-management {
