--- a/client/src/pages/Hospitals/Hospital_Login/OrgLogin.css
+++ b/client/src/pages/Hospitals/Hospital_Login/OrgLogin.css
@@ -107,7 +107,7 @@ body {
 }
 
 .logincard button {
-  background-color: #00ff2f !important; 
+  background-color: #05aa31!important; 
   color: #fff;
   border: none;
   padding: 10px 20px;
