--- a/client/src/pages/LandingPage/LandingPage.css
+++ b/client/src/pages/LandingPage/LandingPage.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 
 @font-face {
   font-family: 'Product Sans'; 
@@ -17,7 +15,6 @@
   font-style: normal; 
 }
 
-
 @font-face {
   font-family: 'segoe-ui-this'; 
   src: url('./fonts/segoe-ui-this/segoeuithis.ttf') format('woff2');
@@ -29,43 +26,32 @@ body {
   margin: 0;
   padding: 0;
   background: #e8fdf1 !important;  /* fallback for old browsers */
+ 
+}
+
+.containers {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+
+
+.nav {
+  list-style: none;
+  padding: 0;
+}
+
+.contents {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.navbar {
-  background-color: transparent;
-  padding: 10px;
-  display: flex;
-  font-family: 'segoe-ui-this'; 
-  justify-content: flex-end;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-
-.nav-right {
-  display: flex;
-  gap: 20px;
-}
-
-.nav-right a {
-  color:rgb(213, 213, 213);
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.content {
-  font-family: 'segoe-ui-this' !important; 
-  font-size: 1.4rem;
-  text-align: center;
-  color: white;
   flex-direction: column;
+  flex-grow: 1; /* Ensure it takes the remaining space */
+  padding: 20px;
 }
 
-.content h1 {
+.content-texts .head h1 {
   font-size: 7rem;
   font-family: 'Product Sans'; 
   margin: 0;
@@ -77,57 +63,12 @@ body {
   background-clip: text;
 }
 
-
-.content p{
+.content-texts p {
   color: #57d000;
   font-size: 15px;
 }
-/* Updated LandingPage.css */
-
-.containers {
-  display: flex;
-}
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 250px;
-  background: linear-gradient(to bottom, #007d43 0%, #00ab5b 100%);
-  color: #fff;
-  padding: 15px;
-  overflow-y: auto;
-  height: 100%;
-}
-
-.sidebar h2 {
-  margin-bottom: 20px;
-}
-
-.nav {
-  list-style: none;
-  padding: 0;
-}
-
-.nav-link {
-  color: #fff;
-  text-decoration: none;
-  display: block;
-  padding: 10px 0;
-}
-
-.nav-link:hover {
-  background: #94ffca;
-  color: #007224;
-}
-
-.content {
-  margin-left: 250px;
-  padding: 20px;
-}
 
 .content-image {
-  margin-left: 20px; /* Adjust as needed */
   margin-top: 70px;
 }
 
@@ -135,6 +76,4 @@ body {
   max-width: 60vh;
   height: auto;
   filter: drop-shadow(0px 4px 8px rgba(0, 0.7, 0, 0.9));
- 
 }
-
